--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -17,6 +17,14 @@
   box-shadow: 0px 10px 20px #b2bec3;
 }
 
+.movies .movies__movie a {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  text-decoration: none;
+  color: inherit;
+}
+
 .movies__movie img {
   margin: 12px;
   width: 180px;
@@ -29,7 +37,7 @@
 }
 
 .movie__data {
-  padding: 0px 0px 0px 10px;
+  margin: 0px 20px 0px 10px;
   color: #b2bec3;
 }
 
